k8s/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: flaskapp
  labels:
    service: database
spec:
  type: ExternalName
  externalName: pg-flaskapp.ccq3nwlgmksx.us-east-1.rds.amazonaws.com
  ports:
  - port: 5432
